tests/qualifieddo/should_fail/qdofail002.stderr

qdofail002.hs:8:11: error: [GHC-40280]
    Illegal qualified ‘P.do’ block
    Suggested fix:
      Perhaps you intended to use the ‘QualifiedDo’ extension

qdofail002.hs:11:13: error: [GHC-40280]
    Illegal qualified ‘P.mdo’ block
    Suggested fix:
      Perhaps you intended to use the ‘QualifiedDo’ extension
